--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -31,7 +31,7 @@ input,textarea{
     box-sizing:boredr-box;
     padding:0 10px;
     line-height: 40px;
-    text-align: left;
+    text-align: center;
     display: block;
     background: rgba(255,243,145,0.9);
     color: #F95901;
