--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -603,6 +603,8 @@
 
 {% block js %}
 <script type="text/javascript">
+initShipInofs();
+
 if (/ipad|iphone|mac/i.test(navigator.userAgent)){
     $('#wrapper').addClass('xui-wrapper');
     // $('.xa-bottom-actionPanel').css('position','absolute');
