--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
@@ -455,6 +455,7 @@ $(document).ready(function($) {
     });
     $('li').each(function(){
         var $el = $(this);
+        console.log('this:',this);
         if(status2order[$el.data('status')]){
             status2order[$el.data('status')].append($el.clone());
         }
