--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -198,6 +198,7 @@ $(document).ready(function(){
     //     var width = $(this).width()-10;
     //     $(this).height(width);
     // });
+    initShipInofs();
 });
 </script>
 {% endblock %}
