完成需求5367 by Eugene

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -94,7 +94,7 @@
             </div>
         {% else %}
             <div data-ui-role="attentionAlert" class="xui-attentionAlert"
-				{% if not cur_request_member %}
+				{% if not request.member.is_subscribed %}
                     data-is-show-button="true"
 				{% endif %}
                 {% if not hide_non_member_cover %}
