需求5470：格式微调

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -100,6 +100,7 @@ textarea{resize:none}
 .w106{width:106px;}
 .w105{width:105px;}
 .w118{width:118px;}
+.w125{width:125px;}
 .w975{width:975px!important;}
 .w972{width:972px!important;}
 .w110{width:110px!important;}
