[朱天琦][f_mall_5421]update

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
@@ -139,10 +139,10 @@
 {#        xlog(('ship_id:')+ ship_id);#}
 {#        console.log('ship_id:',typeof(ship_id),ship_id.length);#}
 {#        console.log('------------------------------------');#}
-        console.log('------------------------------------');
-        console.log(typeof(ship_infos[ship_id]));
-        console.log(JSON.parse(ship_info));
-        console.log('------------------------------------');
+{#        console.log('------------------------------------');#}
+{#        console.log(typeof(ship_infos[ship_id]));#}
+{#        console.log(JSON.parse(ship_info));#}
+{#        console.log('------------------------------------');#}
 
 
     }
