需求5470 样式：点击重新授权时添加提示弹窗，点击“我知道了”跳转授权页面，返回至公众号授权页面时，刷新页面

--- a/weapp/static_v2/css/weixin_advance_manage.css
+++ b/weapp/static_v2/css/weixin_advance_manage.css
@@ -1181,3 +1181,13 @@
     z-index: 10;
 
 }
+
+
+/*xui-weixin-unbindAccountPage*/
+.xui-weixinMpuserRehitDialog  .xui-text{
+	color:red; 
+	text-align:center; 
+	font-size:12px; 
+	padding-top:25px; 
+	line-height:1.6;
+}
