--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -176,6 +176,7 @@ textarea{resize:none}
 .mt80{margin-top:80px;}
 .mt90{margin-top:90px;}
 .mt100{margin-top:100px;}
+.mt300{margin-top:300px;}
 .mb0 {margin-bottom:0px !important;}
 .mb3 {margin-bottom:3px;}
 .mb5{margin-bottom:5px !important;}
