[朱天琦][b_mall_5517]修复BUG5517

--- a/weapp/mall/templates/mall/editor/product_review_update.html
+++ b/weapp/mall/templates/mall/editor/product_review_update.html
@@ -29,7 +29,7 @@
     <table>
         <tr>
             <td>用户名：</td>
-            <td>{{ product_review.member_name}}</td>
+            <td>{{ product_review.member_name | safe}}</td>
         </tr>
         <tr>
             <td>商品评星：</td>
