--- a/weapp/static_v2/css/mall_product.css
+++ b/weapp/static_v2/css/mall_product.css
@@ -205,7 +205,7 @@
 	margin-top: -215px;
 }
 .xui-mallSelectProvinceDialog .modal-body{
-	margin-top: -20px;
+	/*margin-top: -20px;*/
 	padding-left: 22px;
 }						
 .xui-mallSelectProvinceDialog table{
@@ -215,10 +215,12 @@
 .xui-mallSelectProvinceDialog table td{
 	width: 65px;
 	height: 44px;
-	text-align: center;
+	/*text-align: center;*/
 }
 .xui-mallSelectProvinceDialog table td:first-child{
 	font-weight: bold;
+	padding-left: 10px;
+    width: 90px;
 }
 
 /*
