--- a/weapp/static_v2/css/mall_product.css
+++ b/weapp/static_v2/css/mall_product.css
@@ -204,9 +204,12 @@
 	margin-left: -250px;
 	margin-top: -215px;
 }
+.xui-mallSelectProvinceDialog .modal-header{
+	margin-bottom: 0;
+}
 .xui-mallSelectProvinceDialog .modal-body{
 	/*margin-top: -20px;*/
-	padding-left: 22px;
+	padding:0 0 0 22px;
 }						
 .xui-mallSelectProvinceDialog table{
 	border-left: 1px solid #D8DBDD;
