--- a/weapp/weixin2/templates/weixin/message/realtime_messages.html
+++ b/weapp/weixin2/templates/weixin/message/realtime_messages.html
@@ -72,7 +72,7 @@
 								<a {{if !message.fast_reply}}href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" {{if message.member_id}}target="_blank"{{/if}} {{/if}}><img src="${message.user_icon}" width="60" height="60"/></a>
 							</div>
 							<div class="pl15 disTc xui-i-name pa">
-								<div class="xui-i-member-username" class="mb0 mt0" style="height:35px;">
+								<div class="xui-i-member-username pr30" class="mb0 mt0" style="height:35px;">
 									{{if !message.fast_reply}}
 										<a href="{{if message.member_id}}/member/detail/?id=${message.member_id}{{else}}javascript:void(0);{{/if}}" class="mb0" {{if message.member_id}}target="_blank"{{/if}} style="line-height:16px;">{{html message.name}}</a>
 									{{else}}
@@ -86,7 +86,7 @@
 						</div>
 					</td>
 					<td>
-						<div class="xui-i-text xa-displayMessages ml55 mr50 pr" data-replied="${message.could_replied}">
+						<div class="xui-i-text xa-displayMessages ml30 mr50 pr" data-replied="${message.could_replied}">
 							{{if message.message_type == 'text'}}
 								{{if message.is_news_type}}
 									<span name="messageContent">${message.text} <span class="xui-i-newses">图文</span><a href="../../new_weixin/news_preview/?id=${message.material_id}" target="_blank">${message.news_title}</a></span>
