--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -8,7 +8,7 @@
 			<li><a href="/new_weixin/menu/">公众号设置</a></li>
 			<li class="active">公众号绑定</li>
 		</ul>
-		<div class="xa-fansFilterView xui-filterPanel  pr pl45">
+		<div class="xa-fansFilterView xui-filterPanel  pr pl45 pt40">
 			<div class="xui-form disT">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl">
@@ -68,18 +68,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="xui-form disT" style="position: absolute;right: 20px;top: 25px;">
+			<div class="xui-form disT" style="position: absolute;right: 20px;top: 40px;">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl" style="margin-left: 69px">
 					<label class="" >微信二维码：</label>
-					<div style="margin-left: 94px;margin-top: 12px;">
-						<img height="205px" width="205px" src="{% if auth_appid_info %}{{auth_appid_info.qrcode_url}}{% else %}/static/img/user-1.jpg{% endif %}">
+					<div style="margin-left: 65px;margin-top: 12px;">
+						<img height="170px" width="170px" src="{% if auth_appid_info %}{{auth_appid_info.qrcode_url}}{% else %}/static/img/user-1.jpg{% endif %}">
 					</div>
 					</div>
 				</div>
 			</div>
 
-			<div style="border: 1px solid #9d9d9d; margin: 10px 10px 50px 10px;"></div>
+			<div style="border-bottom: 1px solid #9d9d9d; margin: 0 46px 42px 10px;"></div>
 
 			<div class="xui-form disT">
 				<div class="xui-col disTc">
