pc 端不显示黄条提示

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -93,6 +93,7 @@
                 <a data-theme="x" href="/workbench/jqm/preview/?{{homepage_workspace_info|safe}}" data-role="button" class="xui-btn mt20">返回首页</a>
             </div>
         {% else %}
+            {% if not in_design_mode %}
             <div data-ui-role="attentionAlert" class="xui-attentionAlert" 
 				{% if not request.member.is_subscribed %}
                     data-is-show-button="true"
@@ -103,7 +104,7 @@
                 data-id="{{request.webapp_owner_id}}"
                 data-qrcode-image="{{ request.webapp_owner_info.qrcode_img }}">
             </div>
-
+            {% endif %}
             {% block content-panel %}{% endblock %}
         {% endif %}
 
