--- a/weapp/static_v2/js/view/common_image_view/template.html
+++ b/weapp/static_v2/js/view/common_image_view/template.html
@@ -4,7 +4,7 @@
 	</div>
 	<div id="imageView-imgZone" name="imageView-imgZone" class="imgBox pt0 {{if !picUrl}}xui-hide{{/if}} imageView-imgZone"
 	     style="width:${width}px;position:relative;">
-		<button class="close xui-close" style="display:block;opacity:1;line-height:16px;"type="button">×</button>
+		<button class="close xui-close" style="opacity:1;line-height:16px;"type="button">×</button>
 		<div class="imageView-imgContainer" style="clear: right;">
 			{{if picUrl}}
 				<img src="${picUrl}" width="${width}px" height="${height}px" style="width:${width}px; height:${height}px"/>
