--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -94,8 +94,8 @@
             </div>
         {% else %}
             
-        {% if in_design_mode %}
-            <div data-ui-role="attentionAlert" class="xui-attentionAlert" 
+        
+            <div data-ui-role="attentionAlert" class="xui-attentionAlert {% if in_design_mode %}none{% endif %}" 
                 {% if not request.member.is_subscribed %}
                     data-is-show-button="true"
                 {% endif %}
@@ -105,7 +105,7 @@
                 data-id="{{request.webapp_owner_id}}"
                 data-qrcode-image="{{ request.webapp_owner_info.qrcode_img }}">
             </div>
-        {% endif %}
+        
 
             {% block content-panel %}{% endblock %}
         {% endif %}
