--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -9,6 +9,8 @@
       W.sharePageImg = {% if share_img_url %}"{{ share_img_url }}"{% else %}"{{ request.share_img_url }}"{% endif %};
       if(W.sharePageImg.substr(0,7)!="http://" && W.sharePageImg.substr(0,8)!="https://")
       W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
+      alert(W.sharePageTitle);
+      alert(W.sharePageDesc);
 
       var link = window.location.href;
       if (link.indexOf('fmt') === -1){
