--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 
-			<div class="xui-form disT">
+<!-- 			<div class="xui-form disT">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl">
 						<label class="" >头像：</label>
@@ -67,7 +67,7 @@
 			            </div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="xui-form disT" style="position: absolute;right: 20px;top: 25px;">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl" style="margin-left: 69px">
