--- a/weapp/apps/app_template/templates/editor/workbench_template.html
+++ b/weapp/apps/app_template/templates/editor/workbench_template.html
@@ -166,8 +166,10 @@ __STRIPPER_TAG__
 
       __STRIPPER_TAG__
       $('.xa-save').click(function() {
+          var that = this;
         // 保存model
         W.Synchronizer.manualSync(function(page, data) {
+            that.disabled = true;
           var descriptionModel = page.components[0].model;
           var name = descriptionModel.get('title');
           var startTime = descriptionModel.get('start_time')+":00";
@@ -198,6 +200,7 @@ __STRIPPER_TAG__
             },
             error: function(resp) {
               W.showHint('error', '保存失败!');
+                that.disabled = false;
             }
           });
         });
