--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -159,8 +159,10 @@
       loadPages(pageManagerView);
       
       $('.xa-save').click(function() {
+          var that = this;
         // 保存model
         W.Synchronizer.manualSync(function(page, data) {
+            that.disabled = true;
           var descriptionModel = page.components[0].model;
           var name = descriptionModel.get('title');
           var startTime = descriptionModel.get('start_time')+":00";
@@ -191,6 +193,7 @@
             },
             error: function(resp) {
               W.showHint('error', '保存失败!');
+                that.disabled = false;
             }
           });
         });
