BUG 5542:样式问题[微信]-[公众号绑定]图片去掉

--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -61,7 +61,7 @@
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl">
 						<div class="controls">
-							<input type="hidden" name="pic_url" id="pic_url" value="{% if preview_user.image_path %}{{ preview_user.image_path }}{% else %}/static/img/user-1.jpg{% endif %}" data-validate="require-image" data-ui-role="image-selector" data-width="50" data-height="50"/>
+							<!-- <input type="hidden" name="pic_url" id="pic_url" value="{% if preview_user.image_path %}{{ preview_user.image_path }}{% else %}/static/img/user-1.jpg{% endif %}" data-validate="require-image" data-ui-role="image-selector" data-width="50" data-height="50"/> -->
 			                <div  data-ui-role="image-selector-view" auto-show-help="false" style="margin-left: 120px;margin-top: 27px;"></div>
 			                <div class="errorHint"></div>
 			            </div>
