--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -57,17 +57,17 @@
 				</div>
 			</div>
 
-			<div class="xui-form disT">
+			<!-- <div class="xui-form disT">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl">
 						<div class="controls">
-							<!-- <input type="hidden" name="pic_url" id="pic_url" value="{% if preview_user.image_path %}{{ preview_user.image_path }}{% else %}/static/img/user-1.jpg{% endif %}" data-validate="require-image" data-ui-role="image-selector" data-width="50" data-height="50"/> -->
+							<input type="hidden" name="pic_url" id="pic_url" value="{% if preview_user.image_path %}{{ preview_user.image_path }}{% else %}/static/img/user-1.jpg{% endif %}" data-validate="require-image" data-ui-role="image-selector" data-width="50" data-height="50"/>
 			                <div  data-ui-role="image-selector-view" auto-show-help="false" style="margin-left: 120px;margin-top: 27px;"></div>
 			                <div class="errorHint"></div>
 			            </div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="xui-form disT" style="position: absolute;right: 20px;top: 40px;">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl" style="margin-left: 69px">
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 
-			<div style="border-bottom: 1px solid #9d9d9d; margin: -20px 46px 42px 10px;"></div>
+			<div style="border-bottom: 1px solid #9d9d9d; margin: 30px 46px 42px 10px;"></div>
 
 			<div class="xui-form disT">
 				<div class="xui-col disTc">
