BUG 5542:样式问题[微信]-[公众号绑定]图片去掉

--- a/weapp/weixin2/templates/weixin/mp_user/mp_user.html
+++ b/weapp/weixin2/templates/weixin/mp_user/mp_user.html
@@ -57,7 +57,7 @@
 				</div>
 			</div>
 
-			<div class="xui-form disT">
+			<!-- <div class="xui-form disT">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl">
 						<div class="controls">
@@ -67,7 +67,7 @@
 			            </div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="xui-form disT" style="position: absolute;right: 20px;top: 40px;">
 				<div class="xui-col disTc w470">
 					<div class="xui-i-item fl" style="margin-left: 69px">
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 
-			<div style="border-bottom: 1px solid #9d9d9d; margin: -20px 46px 42px 10px;"></div>
+			<div style="border-bottom: 1px solid #9d9d9d; margin: 30px 46px 42px 10px;"></div>
 
 			<div class="xui-form disT">
 				<div class="xui-col disTc">
